z-index bug fix

--- a/src/components/nav/Nav.scss
+++ b/src/components/nav/Nav.scss
@@ -4,7 +4,7 @@ $hands-vmargin: 10px;
 $nav-height: calc($hands-width + 2 * $hands-vmargin);
 
 nav.nav {
-  z-index: 2;
+  z-index: 3;
   position: fixed;
   top: 0;
   left: 0;
